--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "primereact": "^9.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-jwt": "^1.2.0",
     "react-router-dom": "^6.14.1",
     "xlsx": "^0.18.5"
   },
